fix bugs new employee in relgion and division

--- a/themes/bracket/assets/css/ssc-style.css
+++ b/themes/bracket/assets/css/ssc-style.css
@@ -15,7 +15,7 @@ div.dataTables_paginate {
 }
 
 div.dataTables_filter input {
-    width: 25rem;
+    /* width: 25rem; */
     margin-left: 0 !important;
 }
 
