--- a/themes/bracket/assets/css/ssc-style.css
+++ b/themes/bracket/assets/css/ssc-style.css
@@ -24,7 +24,11 @@ div.dataTables_filter input {
     width: 60px !important;
 }
 
-ul.select2-results__options{
+li.select2-results__option strong.select2-results__group {
+    color: #000 !important;
+}
+
+.select2-container--default .select2-results>.select2-results__options{
     max-height: 220px !important;
 }
 
